Update to latest OpenAPI spec (#13)
* Update to latest OpenAPI spec

```
cp ../opal/web/backend/router/handlers/public/openapi.yaml api/openapi.yaml
make gen-openapi
```

* common.go: Rm FolderID from manual helpers
