# model_resource.go
@@ -44,8 +44,6 @@ type Resource struct {
 	RequireManagerApproval *bool `json:"require_manager_approval,omitempty"`
 	// A bool representing whether or not access requests to the resource require an access ticket.
 	RequireSupportTicket *bool `json:"require_support_ticket,omitempty"`
-	// The ID of the folder that the resource is located in.
-	FolderId *string `json:"folder_id,omitempty"`
 	// A bool representing whether or not to require MFA for reviewers to approve requests for this resource.
 	RequireMfaToApprove *bool `json:"require_mfa_to_approve,omitempty"`
 	// A bool representing whether or not to require MFA for requesting access to this resource.
@@ -461,38 +459,6 @@ func (o *Resource) SetRequireSupportTicket(v bool) {
 	o.RequireSupportTicket = &v
 }
 
-// GetFolderId returns the FolderId field value if set, zero value otherwise.
-func (o *Resource) GetFolderId() string {
-	if o == nil || IsNil(o.FolderId) {
-		var ret string
-		return ret
-	}
-	return *o.FolderId
-}
-
-// GetFolderIdOk returns a tuple with the FolderId field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *Resource) GetFolderIdOk() (*string, bool) {
-	if o == nil || IsNil(o.FolderId) {
-		return nil, false
-	}
-	return o.FolderId, true
-}
-
-// HasFolderId returns a boolean if a field has been set.
-func (o *Resource) HasFolderId() bool {
-	if o != nil && !IsNil(o.FolderId) {
-		return true
-	}
-
-	return false
-}
-
-// SetFolderId gets a reference to the given string and assigns it to the FolderId field.
-func (o *Resource) SetFolderId(v string) {
-	o.FolderId = &v
-}
-
 // GetRequireMfaToApprove returns the RequireMfaToApprove field value if set, zero value otherwise.
 func (o *Resource) GetRequireMfaToApprove() bool {
 	if o == nil || IsNil(o.RequireMfaToApprove) {
@@ -792,9 +758,6 @@ func (o Resource) ToMap() (map[string]interface{}, error) {
 	}
 	if !IsNil(o.RequireSupportTicket) {
 		toSerialize["require_support_ticket"] = o.RequireSupportTicket
-	}
-	if !IsNil(o.FolderId) {
-		toSerialize["folder_id"] = o.FolderId
 	}
 	if !IsNil(o.RequireMfaToApprove) {
 		toSerialize["require_mfa_to_approve"] = o.RequireMfaToApprove
