# model_resource_remote_info_aws_eks_cluster.go
@@ -22,6 +22,8 @@ var _ MappedNullable = &ResourceRemoteInfoAwsEksCluster{}
 type ResourceRemoteInfoAwsEksCluster struct {
 	// The ARN of the EKS cluster.
 	Arn string `json:"arn"`
+	// The id of the AWS account. Required for AWS Organizations.
+	AccountId *string `json:"account_id,omitempty"`
 }
 
 // NewResourceRemoteInfoAwsEksCluster instantiates a new ResourceRemoteInfoAwsEksCluster object
@@ -66,6 +68,38 @@ func (o *ResourceRemoteInfoAwsEksCluster) SetArn(v string) {
 	o.Arn = v
 }
 
+// GetAccountId returns the AccountId field value if set, zero value otherwise.
+func (o *ResourceRemoteInfoAwsEksCluster) GetAccountId() string {
+	if o == nil || IsNil(o.AccountId) {
+		var ret string
+		return ret
+	}
+	return *o.AccountId
+}
+
+// GetAccountIdOk returns a tuple with the AccountId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceRemoteInfoAwsEksCluster) GetAccountIdOk() (*string, bool) {
+	if o == nil || IsNil(o.AccountId) {
+		return nil, false
+	}
+	return o.AccountId, true
+}
+
+// HasAccountId returns a boolean if a field has been set.
+func (o *ResourceRemoteInfoAwsEksCluster) HasAccountId() bool {
+	if o != nil && !IsNil(o.AccountId) {
+		return true
+	}
+
+	return false
+}
+
+// SetAccountId gets a reference to the given string and assigns it to the AccountId field.
+func (o *ResourceRemoteInfoAwsEksCluster) SetAccountId(v string) {
+	o.AccountId = &v
+}
+
 func (o ResourceRemoteInfoAwsEksCluster) MarshalJSON() ([]byte, error) {
 	toSerialize,err := o.ToMap()
 	if err != nil {
@@ -77,6 +111,9 @@ func (o ResourceRemoteInfoAwsEksCluster) MarshalJSON() ([]byte, error) {
 func (o ResourceRemoteInfoAwsEksCluster) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
 	toSerialize["arn"] = o.Arn
+	if !IsNil(o.AccountId) {
+		toSerialize["account_id"] = o.AccountId
+	}
 	return toSerialize, nil
 }
 
